--- a/css/sample.css
+++ b/css/sample.css
@@ -11,35 +11,83 @@ html {
     background-size: cover;
     background-image: url("../images/header.jpg");
     background-attachment: fixed;
+    /*display: flex;
+    justify-content:center;*/
+    position:relative;
+    margin-block:0;
   }
-  /* ​ */
+  /* ​*/
   header {
+    background-color: #2B2B2B;
+    height:50px;
   }
+
   
   header ul {
+    list-style: none;
+    align-items: center;
+   
   }
   header ul a {
+    color:white;
   }
   header li {
+   
+    display: inline;
+    margin: 10px;
   }
   header ul:after {
   }
+  
   /* Implémentation de la partie d'en-tête */
   .main-header img {
   /* Implémentation de l'image principale (image des caractères blancs "Achieve") */
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width:13%;
   }
-  .about {
+  .about p{
   /* About Implémentation de la partie Achieve */
+    font-size:0.8rem;
   }
-  /* ​ */
+  .about h1{
+    font-size: 1.5rem;
+  }
+  /* ​*/
   .function {
+    background-color: #D3D3D3;
+    padding: 2%;
+    padding-bottom: 4%;
   }
   .function-images {
+    display:flex;
+    align-items :center;
+    justify-content: center;
+    margin-block : 50px;
+  
   }
   .function-image {
+    padding : 10px;
+    width :250px;
   }
   /* Implémentation de la partie Function */
   footer {
   /* Implémentation du pied de page */
+    position : absolute;
+    bottom:0;
+    width:100%;
+    height:70px;
+    background-color:#283A4B;
+  }
+  footer p{
+    color: #fff;
+    font-size:0.8rem;
+  }
+  .left{
+    float:left;
+  }
+  .right{
+    float:right;
   }
   
